Falta la segunda vista

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="dark_primary_color">#E64A19</color>
     <color name="light_primary_color">#FFCCBC</color>
     <color name="primar_color">#FF5722</color>
-    <color name="text_icons">#FFFFF</color>
+    <color name="text_icons">#FFFFFF</color>
     <color name="acent_color">#CDDC39</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
